src/test/06-Errors/error-this.txt
error-this.ck:1:1: error: keyword 'this' cannot used outside class definition
[1] this => now;
    ^
